cabal-version:   3.0
name:            vehicle-python-binding
version:         0.3.3
description:
  Please see the README on GitHub at <https://github.com/wenkokke/vehicle#readme>

homepage:        https://github.com/wenkokke/vehicle#readme
bug-reports:     https://github.com/wenkokke/vehicle/issues
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com}
copyright:       © 2023-2023 Wen Kokke
license:         MIT
build-type:      Custom
extra-doc-files: README.md

source-repository head
  type:     git
  location: https://github.com/wenkokke/vehicle

custom-setup
  setup-depends:
    , base
    , Cabal
    , directory
    , filepath

common warnings
  ghc-options: -Wall

foreign-library _binding
  import:             warnings
  type:               native-shared

  -- 01-04-2023:
  -- Standalone builds appear to work with macOS builds of GHC
  if os(osx)
    options: standalone

  if os(windows)
    options:      standalone
    mod-def-file: src/vehicle_lang/binding.def

  c-sources:          src/vehicle_lang/binding_wrap.c
  hs-source-dirs:     src
  other-modules:      VehiclePythonBinding
  build-depends:
    , base                  >=4.7  && <5
    , optparse-applicative  >=0.16 && <1
    , vehicle

  default-language:   Haskell2010
  build-tool-depends: BNFC:bnfc
