cabal-version:   3.0
name:            vehicle-python-binding
version:         0.15.0
description:
  Please see the README on GitHub at <https://github.com/wenkokke/vehicle#readme>

homepage:        https://github.com/wenkokke/vehicle#readme
bug-reports:     https://github.com/wenkokke/vehicle/issues
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com}
copyright:       © 2023-2023 Wen Kokke
license:         MIT
build-type:      Custom
extra-doc-files: README.md
tested-with:     GHC ==9.4.8

source-repository head
  type:     git
  location: https://github.com/wenkokke/vehicle

custom-setup
  setup-depends:
    , base
    , Cabal
    , directory
    , filepath

common warnings
  ghc-options: -Wall

foreign-library _binding
  import:             warnings
  type:               native-shared

  -- 10-01-2024:
  -- Add RTS options for compilation to dynamic library.
  ghc-options:
    -with-rtsopts="--install-signal-handlers=no"
    -with-rtsopts="--install-seh-handlers=no" -with-rtsopts="-V0"

  -- 01-04-2023:
  -- Standalone builds appear to work with macOS builds of GHC
  if os(osx)
    options: standalone

  if os(windows)
    options:      standalone
    mod-def-file: src/vehicle_lang/binding.def

  c-sources:          src/vehicle_lang/binding_wrap.c
  hs-source-dirs:     src
  other-modules:      VehiclePythonBinding
  build-depends:
    , base
    , bytestring
    , optparse-applicative
    , text
    , vehicle

  default-language:   Haskell2010
  build-tool-depends: BNFC:bnfc
