cabal-version:      2.0
name:               vehicle-syntax
version:            0.1.0
description:
  Please see the README on GitHub at <https://github.com/vehicle-lang/vehicle#readme>

homepage:           https://github.com/vehicle-lang/vehicle#readme
bug-reports:        https://github.com/vehicle-lang/vehicle/issues
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
copyright:          © Wen Kokke
license:            BSD3
license-file:       LICENSE
build-type:         Custom
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
extra-source-files:
  src/Vehicle/Syntax/External.cf
  src/Vehicle/Syntax/Internal.cf

extra-tmp-files:
  autogen/Vehicle/Syntax/External/Abs.hs
  autogen/Vehicle/Syntax/External/ErrM.hs
  autogen/Vehicle/Syntax/External/Layout.hs
  autogen/Vehicle/Syntax/External/Lex.hs
  autogen/Vehicle/Syntax/External/Par.hs
  autogen/Vehicle/Syntax/External/Print.hs
  autogen/Vehicle/Syntax/Internal/Abs.hs
  autogen/Vehicle/Syntax/Internal/ErrM.hs
  autogen/Vehicle/Syntax/Internal/Lex.hs
  autogen/Vehicle/Syntax/Internal/Par.hs
  autogen/Vehicle/Syntax/Internal/Print.hs

source-repository head
  type:     git
  location: https://github.com/vehicle-lang/vehicle

custom-setup
  setup-depends:
      base      >=4
    , Cabal     >=2.0.0.2
    , filepath  >=1

library
  hs-source-dirs:     autogen src
  exposed-modules:
    Vehicle.Syntax.AST
    Vehicle.Syntax.Parse
    Vehicle.Syntax.Prelude
    Vehicle.Syntax.Print
    Vehicle.Syntax.Sugar

  other-modules:
    Vehicle.Syntax.AST.Arg
    Vehicle.Syntax.AST.Binder
    Vehicle.Syntax.AST.Builtin
    Vehicle.Syntax.AST.Builtin.Core
    Vehicle.Syntax.AST.Builtin.Linearity
    Vehicle.Syntax.AST.Builtin.Polarity
    Vehicle.Syntax.AST.Builtin.TypeClass
    Vehicle.Syntax.AST.Decl
    Vehicle.Syntax.AST.Expr
    Vehicle.Syntax.AST.Meta
    Vehicle.Syntax.AST.Name
    Vehicle.Syntax.AST.Prog
    Vehicle.Syntax.AST.Provenance
    Vehicle.Syntax.AST.Relevance
    Vehicle.Syntax.AST.Visibility
    Vehicle.Syntax.BNFC.Delaborate.External
    Vehicle.Syntax.BNFC.Delaborate.Internal
    Vehicle.Syntax.BNFC.Elaborate.External
    Vehicle.Syntax.BNFC.Elaborate.Internal
    Vehicle.Syntax.BNFC.Utils
    Vehicle.Syntax.External.Abs
    Vehicle.Syntax.External.ErrM
    Vehicle.Syntax.External.Layout
    Vehicle.Syntax.External.Lex
    Vehicle.Syntax.External.Par
    Vehicle.Syntax.External.Print
    Vehicle.Syntax.Internal.Abs
    Vehicle.Syntax.Internal.ErrM
    Vehicle.Syntax.Internal.Lex
    Vehicle.Syntax.Internal.Par
    Vehicle.Syntax.Internal.Print
    Vehicle.Syntax.Parse.Error
    Vehicle.Syntax.Parse.Token

  autogen-modules:
    Vehicle.Syntax.External.Abs
    Vehicle.Syntax.External.ErrM
    Vehicle.Syntax.External.Layout
    Vehicle.Syntax.External.Lex
    Vehicle.Syntax.External.Par
    Vehicle.Syntax.External.Print
    Vehicle.Syntax.Internal.Abs
    Vehicle.Syntax.Internal.ErrM
    Vehicle.Syntax.Internal.Lex
    Vehicle.Syntax.Internal.Par
    Vehicle.Syntax.Internal.Print

  build-depends:
      aeson              >=2.1.1 && <2.2
    , array              >=0.5   && <1
    , base               >=4     && <5
    , containers         >=0.5   && <1
    , deepseq            >=1.4   && <2
    , hashable           >=1.3   && <2
    , mtl                >=2.2   && <3
    , nothunks           >=0.1.3 && <0.2
    , prettyprinter      >=1.7   && <2
    , recursion-schemes  >=5.2   && <6
    , text               >=1.2   && <3

  build-tool-depends:
      alex:alex    >=3
    , BNFC:bnfc    >=2.9.4
    , happy:happy  >=1.19

  default-language:   Haskell2010
  default-extensions:
    ConstraintKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    TypeApplications
    TypeFamilies
