cabal-version:      3.0
name:               vehicle-syntax
version:            0.3.3
description:
  Please see the README on GitHub at <https://github.com/vehicle-lang/vehicle#readme>

homepage:           https://github.com/vehicle-lang/vehicle#readme
bug-reports:        https://github.com/vehicle-lang/vehicle/issues
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
copyright:          © Wen Kokke
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Custom
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
extra-source-files:
  src/Vehicle/Syntax/External.cf
  src/Vehicle/Syntax/Internal.cf

extra-tmp-files:
  autogen/Vehicle/Syntax/External/Abs.hs
  autogen/Vehicle/Syntax/External/ErrM.hs
  autogen/Vehicle/Syntax/External/Layout.hs
  autogen/Vehicle/Syntax/External/Lex.hs
  autogen/Vehicle/Syntax/External/Par.hs
  autogen/Vehicle/Syntax/External/Print.hs
  autogen/Vehicle/Syntax/Internal/Abs.hs
  autogen/Vehicle/Syntax/Internal/ErrM.hs
  autogen/Vehicle/Syntax/Internal/Lex.hs
  autogen/Vehicle/Syntax/Internal/Par.hs
  autogen/Vehicle/Syntax/Internal/Print.hs

source-repository head
  type:     git
  location: https://github.com/vehicle-lang/vehicle

custom-setup
  setup-depends:
    , base      >=4
    , Cabal     >=2.0.0.2
    , filepath  >=1

flag ghc-debug
  description: Add ghc-debug instrumentation
  manual:      True
  default:     False

flag nothunks
  description: Add NoThunks instrumentation
  manual:      True
  default:     False

common common-language
  default-language:   Haskell2010
  default-extensions:
    ConstraintKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

common common-library
  import: common-language

  if flag(ghc-debug)
    build-depends: ghc-debug-stub >=0.3 && <0.5
    cpp-options:   -DghcDebug

  if flag(nothunks)
    build-depends: nothunks >=0.1.3 && <0.2
    cpp-options:   -Dnothunks

library
  import:             common-library
  hs-source-dirs:     autogen src
  exposed-modules:
    Vehicle.Syntax.AST
    Vehicle.Syntax.Parse
    Vehicle.Syntax.Prelude
    Vehicle.Syntax.Print
    Vehicle.Syntax.Sugar

  other-modules:
    Vehicle.Syntax.AST.Arg
    Vehicle.Syntax.AST.Binder
    Vehicle.Syntax.AST.Builtin
    Vehicle.Syntax.AST.Builtin.Core
    Vehicle.Syntax.AST.Builtin.TypeClass
    Vehicle.Syntax.AST.Decl
    Vehicle.Syntax.AST.Expr
    Vehicle.Syntax.AST.Instances.NoThunks
    Vehicle.Syntax.AST.Meta
    Vehicle.Syntax.AST.Name
    Vehicle.Syntax.AST.Prog
    Vehicle.Syntax.AST.Provenance
    Vehicle.Syntax.AST.Relevance
    Vehicle.Syntax.AST.Visibility
    Vehicle.Syntax.BNFC.Delaborate.External
    Vehicle.Syntax.BNFC.Delaborate.Internal
    Vehicle.Syntax.BNFC.Elaborate.External
    Vehicle.Syntax.BNFC.Elaborate.Internal
    Vehicle.Syntax.BNFC.Utils
    Vehicle.Syntax.Debug
    Vehicle.Syntax.External.Abs
    Vehicle.Syntax.External.ErrM
    Vehicle.Syntax.External.Layout
    Vehicle.Syntax.External.Lex
    Vehicle.Syntax.External.Par
    Vehicle.Syntax.External.Print
    Vehicle.Syntax.Internal.Abs
    Vehicle.Syntax.Internal.ErrM
    Vehicle.Syntax.Internal.Lex
    Vehicle.Syntax.Internal.Par
    Vehicle.Syntax.Internal.Print
    Vehicle.Syntax.Parse.Error
    Vehicle.Syntax.Parse.Token

  autogen-modules:
    Vehicle.Syntax.External.Abs
    Vehicle.Syntax.External.ErrM
    Vehicle.Syntax.External.Layout
    Vehicle.Syntax.External.Lex
    Vehicle.Syntax.External.Par
    Vehicle.Syntax.External.Print
    Vehicle.Syntax.Internal.Abs
    Vehicle.Syntax.Internal.ErrM
    Vehicle.Syntax.Internal.Lex
    Vehicle.Syntax.Internal.Par
    Vehicle.Syntax.Internal.Print

  build-depends:
    , aeson          ^>=2.1.1
    , array          >=0.5    && <1
    , base           >=4      && <5
    , cereal         >=0.5    && <1
    , cereal-text    >=0.1    && <1
    , containers     >=0.5    && <1
    , deepseq        >=1.4    && <2
    , hashable       >=1.3    && <2
    , mtl            >=2.2    && <3
    , prettyprinter  >=1.7    && <2
    , text           >=1.2    && <3
    , these          >=1.0    && <2

  -- Trying to fix version of Alex as the CI is installing a weird dev version with label
  -- alex-3.2.7.1-e-alex-74292c840d46e203e846167e7ae201e465952b30efa86f91f8eef0e8478e6cc0

  build-tool-depends:
    , alex:alex    ==3.2.7.1
    , BNFC:bnfc    >=2.9.4
    , happy:happy  >=1.19
